# ea872

./: Makefile  README.md  exercicio.cpp  exercicio1.cpp  mvc.cpp  sdl.cpp  tutorial  tutorial.cpp
aula4/sdl/: CMakeLists.txt  tutorial  tutorial.cpp
aula4/sdl/include/: SystemController.h  SystemModel.h  SystemView.h
aula4/sdl/src/: SystemController.cpp  SystemModel.cpp  SystemView.cpp  main.cpp
exercicio1/: exercicio  exercicio.cpp
mma/: mma.cpp
mvc/: mvc  mvc.cpp
